<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/question_5_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:src="@drawable/chesty_puller" />

    <!-- Question 5 layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_5_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/regular_dimen"
            android:layout_marginRight="@dimen/regular_dimen"
            android:layout_marginTop="@dimen/regular_dimen"
            android:text="@string/question_5"
            android:textSize="@dimen/question_text_size"
            android:theme="@style/marineText" />

        <!-- Users can only select 1 answer -->
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_5a"
                style="@style/marineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/question_dimen"
                android:layout_marginTop="@dimen/question_dimen"
                android:text="@string/question_5a"
                android:theme="@style/Select" />

            <RadioButton
                android:id="@+id/question_5b"
                style="@style/marineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/question_dimen"
                android:layout_marginTop="@dimen/question_dimen"
                android:text="@string/question_5b"
                android:theme="@style/Select" />

            <RadioButton
                android:id="@+id/question_5c"
                style="@style/marineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/question_dimen"
                android:layout_marginTop="@dimen/question_dimen"
                android:text="@string/question_5c"
                android:theme="@style/Select" />

            <RadioButton
                android:id="@+id/question_5d"
                style="@style/marineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/question_dimen"
                android:layout_marginTop="@dimen/question_dimen"
                android:text="@string/question_5d"
                android:theme="@style/Select" />

        </RadioGroup>

    </LinearLayout>

    <!-- Button to go to quiz results -->
    <Button
        android:id="@+id/bullet"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_dimen"
        android:layout_marginTop="@dimen/button_dimen"
        android:background="@drawable/submit"
        android:onClick="submitQuestion5"
        android:rotation="9" />


</RelativeLayout>