<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/regular_dimen"
            android:scaleType="fitXY"
            android:src="@drawable/mc_emblem" />

        <LinearLayout
            android:id="@+id/main_activity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/regular_dimen"
                android:layout_marginRight="@dimen/regular_dimen"
                android:layout_marginTop="@dimen/regular_dimen"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="@dimen/question_text_size"
                android:theme="@style/marineText" />

            <TextView
                android:id="@+id/welcome_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/regular_dimen"
                android:layout_marginRight="@dimen/regular_dimen"
                android:layout_marginTop="@dimen/regular_dimen"
                android:text="@string/welcome_1"
                android:textAlignment="center"
                android:textSize="@dimen/question_text_size"
                android:theme="@style/marineText" />

            <TextView
                android:id="@+id/welcome_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/regular_dimen"
                android:layout_marginRight="@dimen/regular_dimen"
                android:layout_marginTop="@dimen/regular_dimen"
                android:text="@string/welcome_2"
                android:textAlignment="center"
                android:textSize="@dimen/question_text_size"
                android:theme="@style/marineText" />

            <!-- Allows users to enter their name for future reference in results -->
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/regular_dimen"
                android:layout_marginRight="@dimen/regular_dimen"
                android:layout_marginTop="@dimen/regular_dimen"
                android:hint="Enter your name"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/question_text_size"
                android:theme="@style/Edit" />/>

        </LinearLayout>

        <!-- Button to enter quiz and go to question 1 -->
        <Button
            android:id="@+id/bullet"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/main_activity_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/button_dimen"
            android:layout_marginTop="@dimen/button_dimen"
            android:background="@drawable/start"
            android:onClick="startQuiz"
            android:rotation="9" />

    </RelativeLayout>

</ScrollView>
